src/web/src/feature/Customers/List/CustomersList.css
.standby {
  background-color: lightyellow !important;
}

.customer-item-xs {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 0.125fr;
}

.customer-item-head {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 0.25fr 0.20fr 0.20fr;
}

.customer-item {
  display: grid;
  width: 100%;
  grid-template-columns: 14fr 0.5fr 0.5fr 0.5fr;
}

.customer-link {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
}

.customer-link-xs {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 0.5fr;
}

.customer-link-xs a .area {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.customer-item .icon {
  cursor: pointer;
}

.customers-list {
  padding-bottom: 4rem;
}

